[project]
name = "eqanalysis"
version = "0.1.0"
description = "Python package for EQAnalysis GitHub Repository"
authors = [
    {name = "Silentgyuu",email = "Silentgyuu@gmail.com"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "numpy (==1.26.4)",
    "pandas (==1.5.3)",
    "obspy (==1.4.1)",
    "pygmt (==0.13.0)",
    "folium (==0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
